  mdb_config::set_imdbfill). To enable the use of this, the new constant
  mdb_config::pilot_imdbfallback_enabled needs to be set to TRUE
+ pilotsearch now honors the maxresults setting
! imdb::quotes() had some annoying "share this quote" added due to IMDB site changes
+ added imdb::videosites() to retrieve the external trailer links again

v1.9.9 (24.02.2010)
-------------------
* imdb::movieconnection() - fixed FollowedBy and added Follows (tnx 2 Qvist)
* imdb::releaseInfo() now catches a few more cases (missing links)
* imdbXML class updated with a patch from the author
+ imdb::movieconnections() - added more connections (tnx to Qvist)
! IMDB Search did not work with the localized sites due to new domains used
! imdb_person::filmograf did not catch characters if they had no link. Due
  to changes on the IMDB sites, it in fact did no longer catch any character...
+ pilot movie class now correctly assigns the persons IMDBID
! imdb_person: born() and died() missed to return the year due to IMDB site changes
! imdb::seasons() returned wrong season count, and imdb::episodes() got messed up on airing dates
+ pilot_person: class added
! imdb::releaseInfo() did not recognize entries without day - fixed.
+ caching functionality added to the imdbsearch class
+ pilotsearch class now stores found movies to cache
+ *_person::movies_writer() added to get writers filmography
! imdb_person::born() and died() have been broken by IMDB changes again - fixed.
  Same for interviews(), articles(), pictorials() and magcovers().
! imdb::color() has been broken by IMDB changes - also fixed. Same for
  imdb::sound(), mpaa() and mpaa_hist()

v1.9.8 (02.12.2009)
-------------------
* started restructuring the classes and files to provide a core API for extensions
+ first extension added: basic functionality for MoviePilot
  (http://www.moviepilot.de/), supporting some movie functionality only
+ added the pilot_imdbfill class constant to define IMDB access level for